# CUDAmop

./: .gitignore  CMakeLists.txt  README.md  source.sh
include/: cudamop.cuh  gpu_utils.cuh  math_util.cuh  matrix_mul.cuh  profile.h  register.h  sort.cuh  spmv.cuh  sum_reduction.cuh  topk.cuh  vector_addition.cuh
include/select/: radix_select.cuh  radix_type_translator.cuh
include/sort/: bitonic_sort.cuh
include/topk/: mb_reduce_topk.cuh  sb_perthread_heap_topk.cuh  sb_perwarp_heap_topk.cuh  sb_radix_select_topk.cuh  sb_radix_sort_topk.cuh
include/utils/: bit_field.cuh  gpu.cuh  math.cuh  scan.cuh
profiling/basic_vector_addition/: main.cu
profiling/cublas/: matrix_multiplication.cu  utils.cpp  vector_add.cu
profiling/matrix_multiplication/: aligned.cu  basic.cu  tiled.cu  utils.cpp  verify.cpp
profiling/spmv/: basic.cu  scalar.cu  utils.cpp  vector.cu
profiling/sum_reduction/: basic.cu  non_divergence.cu  utils.cpp
profiling/topk/: main.cu  mix_test.cu  test_heap_topk.cuh  test_reduce_topk.cuh  test_select_topk.cuh  test_sort_topk.cuh  utils.cpp
profiling/vector_addition/: basic.cu  unified.cu  unified_prefetch.cu  utils.cpp  verify.cpp
result/: aligned_matrix_multiplication.nsys-rep  basic_matrix_multiplication.nsys-rep  basic_spmv.nsys-rep  basic_sum_reduction.nsys-rep  basic_vector_addition.nsys-rep  non_divergence_sum_reduction.nsys-rep  spmv_csr_vector.nsys-rep  tiled_matrix_multiplication.nsys-rep  unified_prefetch_vector_addition.nsys-rep  unified_vector_addition.nsys-rep
src/: matrix_mul.cu  spmv.cu  sum_reduction.cu  vector_addition.cu
src/sort/: bitonic.cu  radix.cu
src/topk/: min_heap_topk.cu  sort_topk.cu
